# address-book

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/address_book/: dependencies.py
src/address_book/dao/: redis_dao.py
src/address_book/endpoints/: api_router.py  api_v1_router.py
src/address_book/endpoints/api/: endpoints.py
src/address_book/schemas/: address_book_schemas.py
src/redis/: redis_client.py
